--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   },
   "dependencies": {
     "@floating-ui/react": "^0.27.17",
-    "@headlessui/react": "^2.2.9",
+    "@headlessui/react": "^2.0.0",
     "@heroicons/react": "^2.2.0",
     "@tanstack/react-table": "^8.21.3",
     "framer-motion": "^12.29.2",
     "lucide-react": "^0.563.0",
-    "next": "^14.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "next": "15.1.6",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.71.1",
     "react-icons": "^5.5.0",
     "react-is": "^19.2.4",
@@ -29,11 +29,12 @@
     "@tailwindcss/forms": "^0.5.11",
     "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^22.14.0",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "@types/react-select": "^5.0.0",
     "autoprefixer": "^10.4.23",
     "eslint": "^8.0.0",
-    "eslint-config-next": "^14.0.0",
+    "eslint-config-next": "^15.1.6",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
     "typescript": "~5.8.2"
