--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "nexus-crm-superadmin",
   "private": true,
   "version": "0.0.0",
+  "engines": {
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
