--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@tanstack/react-table": "^8.21.3",
     "framer-motion": "^12.29.2",
     "lucide-react": "^0.563.0",
-    "next": "15.1.6",
+    "next": "15.5.11",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-hook-form": "^7.71.1",
@@ -42,5 +42,8 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
     "typescript": "~5.8.2"
+  },
+  "optionalDependencies": {
+    "@next/swc-win32-x64-msvc": "15.5.11"
   }
 }
