--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "@tanstack/react-table": "^8.21.3",
     "framer-motion": "^12.29.2",
     "lucide-react": "^0.563.0",
-    "next": "15.5.11",
+    "next": "15.0.3",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-hook-form": "^7.71.1",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-is": "^19.2.4",
     "react-select": "^5.10.2",
