chore: update dependencies and configuration files
- Updated `framer-motion` from `^12.29.2` to `^11.15.0`
- Updated `next` from `15.0.3` to `15.1.5`
- Updated `react` and `react-dom` from `^19.2.3` to `19.0.0`
- Updated `recharts` from `^3.7.0` to `^2.15.0`
- Updated `eslint-config-next` from `^15.1.6` to `15.0.3`
- Updated `tailwindcss` from `^4.1.18` to `^3.4.1`
- Updated `typescript` from `~5.8.2` to `^5.7.0`
- Added `postinstall` script to `package.json`
- Created `.npmrc` for consistent dependency resolution
- Created `vercel.json` for deployment configuration

--- a/package.json
+++ b/package.json
@@ -10,41 +10,40 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "npm list --depth=0 || true"
   },
   "dependencies": {
     "@floating-ui/react": "^0.27.17",
     "@headlessui/react": "^2.0.0",
     "@heroicons/react": "^2.2.0",
     "@tanstack/react-table": "^8.21.3",
-    "framer-motion": "^12.29.2",
+    "framer-motion": "^11.15.0",
     "lucide-react": "^0.563.0",
-    "next": "15.0.3",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
+    "next": "15.1.5",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-hook-form": "^7.71.1",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
-    "react-is": "^19.2.4",
     "react-select": "^5.10.2",
-    "recharts": "^3.7.0",
+    "recharts": "^2.15.0",
     "rizzui": "^2.1.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.11",
-    "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^22.14.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
-    "@types/react-select": "^5.0.0",
     "autoprefixer": "^10.4.23",
     "eslint": "^8.0.0",
-    "eslint-config-next": "^15.1.6",
+    "eslint-config-next": "15.0.3",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.18",
-    "typescript": "~5.8.2"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.7.0"
   },
-  "optionalDependencies": {
-    "@next/swc-win32-x64-msvc": "15.5.11"
+  "overrides": {
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
   }
 }
