chore: update .npmrc, package.json, and vercel.json for consistency and optimization

--- a/.npmrc
+++ b/.npmrc
@@ -1,13 +1,7 @@
-# Ensure consistent dependency resolution across environments
+# Ensure consistent dependency resolution
 legacy-peer-deps=false
-strict-peer-dependencies=false
-auto-install-peers=true
 save-exact=false
-engine-strict=true
+engine-strict=false
 
 # Reduce package-lock.json conflicts
 package-lock=true
-lockfile-version=3
-
-# Vercel deployment optimization
-node-linker=hoisted
