--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,5 @@
 {
-  "buildCommand": "npm ci && npm run build",
-  "devCommand": "npm run dev",
-  "installCommand": "npm ci",
   "framework": "nextjs",
-  "regions": ["iad1"],
-  "build": {
-    "env": {
-      "NODE_VERSION": "20.18.1",
-      "NPM_VERSION": "10.x"
-    }
-  }
+  "buildCommand": "next build",
+  "installCommand": "npm install"
 }
