--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "private": true,
   "version": "0.0.0",
   "engines": {
-    "node": "20.x",
-    "npm": "10.x"
+    "node": ">=20.0.0 <23.0.0",
+    "npm": ">=10.0.0"
   },
   "scripts": {
     "dev": "next dev",
