--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-icons": "^5.5.0",
     "react-select": "^5.10.2",
     "recharts": "^2.15.0",
-    "rizzui": "^2.1.0"
+    "rizzui": "^2.1.0",
+    "use-sound": "^5.0.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.11",
