--- a/package.json
+++ b/package.json
@@ -18,14 +18,18 @@
     "@headlessui/react": "^2.0.0",
     "@heroicons/react": "^2.2.0",
     "@tanstack/react-table": "^8.21.3",
+    "@types/react-datepicker": "^6.2.0",
     "framer-motion": "^11.15.0",
+    "libphonenumber-js": "^1.12.36",
     "lucide-react": "^0.563.0",
     "next": "15.3.9",
     "react": "19.0.0",
+    "react-datepicker": "^9.1.0",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.71.1",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-phone-number-input": "^3.4.14",
     "react-select": "^5.10.2",
     "recharts": "^2.15.0",
     "rizzui": "^2.1.0",
@@ -36,6 +40,7 @@
     "@types/node": "^22.14.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "@types/react-phone-number-input": "^3.0.17",
     "autoprefixer": "^10.4.23",
     "eslint": "^8.0.0",
     "eslint-config-next": "15.3.9",
