- Applied CSS variables for font and color management across the application. - Updated global styles to utilize tenant-specific fonts and removed hardcoded font imports.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@heroicons/react": "^2.2.0",
     "@tanstack/react-table": "^8.21.3",
     "@types/react-datepicker": "^6.2.0",
+    "font-list": "^2.0.2",
     "framer-motion": "^11.15.0",
     "libphonenumber-js": "^1.12.36",
     "lucide-react": "^0.563.0",
@@ -26,6 +27,7 @@
     "react": "19.0.0",
     "react-datepicker": "^9.1.0",
     "react-dom": "19.0.0",
+    "react-fontpicker-ts": "^1.3.0",
     "react-hook-form": "^7.71.1",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
