--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "libphonenumber-js": "^1.12.36",
     "lucide-react": "^0.563.0",
     "next": "15.3.9",
+    "quill": "^2.0.3",
     "react": "19.0.0",
     "react-datepicker": "^9.1.0",
     "react-dom": "19.0.0",
@@ -32,6 +33,7 @@
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-phone-number-input": "^3.4.14",
+    "react-quill": "^2.0.0",
     "react-select": "^5.10.2",
     "recharts": "^2.15.0",
     "rizzui": "^2.1.0",
