--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "font-list": "^2.0.2",
     "framer-motion": "^11.15.0",
     "libphonenumber-js": "^1.12.36",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.563.0",
     "next": "15.3.9",
     "quill": "^2.0.3",
