--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@heroicons/react": "^2.2.0",
     "@tanstack/react-table": "^8.21.3",
     "@types/react-datepicker": "^6.2.0",
+    "axios": "^1.13.5",
     "font-list": "^2.0.2",
     "framer-motion": "^11.15.0",
     "jspdf": "^4.1.0",
