--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@floating-ui/react": "^0.27.17",
     "@headlessui/react": "^2.0.0",
     "@heroicons/react": "^2.2.0",
+    "@reduxjs/toolkit": "^2.11.2",
     "@tanstack/react-table": "^8.21.3",
     "@types/react-datepicker": "^6.2.0",
     "font-list": "^2.0.2",
@@ -37,6 +38,7 @@
     "react-icons": "^5.5.0",
     "react-phone-number-input": "^3.4.14",
     "react-quill": "^2.0.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.13.0",
     "react-select": "^5.10.2",
     "recharts": "^2.15.0",
